--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Home - Registration and Login</title>
+	<meta charset="ISO-8859-1">
+	<title>Home - Registration and Login</title>
+	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+	
 </head>
 <body>
-	<h1>Welcome to the registration and login page</h1>
+	<div class="container">
+		<h1>Welcome to the registration and login page</h1>
+	</div>
 </body>
 </html>
+
+<style>
+	.container{
+	
+	}
+</style>
