--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="ISO-8859-1">
 	<title>Home - Registration and Login</title>
@@ -7,14 +7,13 @@
 	
 </head>
 <body>
-	<div class="container">
-		<h1>Welcome to the registration and login page</h1>
+	<div class="container text-center">
+		<div>
+			<h1>Welcome home!</h1>
+		</div>
+		<div>
+			<h3><a th:href="@{/register}">Register</a></h3>
+		</div>
 	</div>
 </body>
 </html>
-
-<style>
-	.container{
-	
-	}
-</style>
