--- a/src/main/resources/templates/register_sucess.html
+++ b/src/main/resources/templates/register_sucess.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container text-center">
 		<div>
-			<h3>You have signed up succesfully</h3>
+			<h3>You have signed up successfully</h3>
 			<h4><a th:href="@{/login}">Click here to login</a></h4>
 		</div>
 	</div>
