--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,9 @@
 			<h1>Welcome home!</h1>
 		</div>
 		<div>
+			<h3><a th:href="@{/list_users}">List All Users</a></h3>
 			<h3><a th:href="@{/register}">Register</a></h3>
+			<h3><a th:href="@{/login}">Login</a></h3>
 		</div>
 	</div>
 </body>
